[package]
name = "waves-enterprise-sdk"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base58 = "0.2.0"
tiny-bip39 = "0.8.2"
curve25519-dalek = "3.2.1"
sha2 = "0.10.2"
sha3 = "0.10.1"
blake2 = "0.10.4"
ed25519-dalek = "1.0.1"
